--- a/behaviors/indexmenusoperations/partials/_toolbar.htm
+++ b/behaviors/indexmenusoperations/partials/_toolbar.htm
@@ -2,7 +2,7 @@
     <a
         href="javascript:;"
         class="btn btn-primary oc-icon-check save"
-        data-builder-command="menu:cmdSaveMenus"
+        data-builder-command="menus:cmdSaveMenus"
         data-load-indicator="<?= e(trans('backend::lang.form.saving')) ?>"
         data-hotkey="ctrl+s, cmd+s">
         <?= e(trans('backend::lang.form.save')) ?>
