--- a/assets/less/menus.less
+++ b/assets/less/menus.less
@@ -72,6 +72,12 @@
                     }
                 }
             }
+
+            &.list-sortable-placeholder {
+                border: 2px dotted @builder-hover-color;
+                height: 10px;
+                background: transparent;
+            }
         }
 
         &.builder-main-menu {
