--- a/formwidgets/menueditor/partials/_submenuitem.htm
+++ b/formwidgets/menueditor/partials/_submenuitem.htm
@@ -2,6 +2,7 @@
     class="item"
     data-inspectable
     data-inspector-title="<?= e(trans('rainlab.builder::lang.menu.side_menu_item')) ?>"
+    draggable="true"
 >
     <div class="item-container">
         <i class="<?= e($this->getItemArrayProperty($item, 'icon')) ?>"></i>
