--- a/behaviors/indexversionsoperations/partials/_toolbar.htm
+++ b/behaviors/indexversionsoperations/partials/_toolbar.htm
@@ -8,6 +8,24 @@
         <?= e(trans('backend::lang.form.save')) ?>
     </a>
 
+    <a
+        href="javascript:;"
+        class="btn btn-primary oc-icon-bolt <?php if ($model->isApplied()): ?>hide<?php endif ?>"
+        data-builder-command="version:cmdApplyVersion"
+        data-load-indicator="<?= e(trans('rainlab.builder::lang.version.applying')) ?>"
+        data-hotkey="ctrl+s, cmd+s">
+        <?= e(trans('rainlab.builder::lang.version.apply_version')) ?>
+    </a>
+
+    <a
+        href="javascript:;"
+        class="btn btn-primary oc-icon-undo <?php if (!$model->isApplied()): ?>hide<?php endif ?>"
+        data-builder-command="version:cmdRollbackVersion"
+        data-load-indicator="<?= e(trans('rainlab.builder::lang.version.rolling_back')) ?>"
+        data-hotkey="ctrl+s, cmd+s">
+        <?= e(trans('rainlab.builder::lang.version.rollback_version')) ?>
+    </a>
+    
     <button
         type="button"
         class="btn btn-default empty oc-icon-trash-o <?php if (!strlen($originalVersion)): ?>hide<?php endif ?>"
