--- a/widgets/versionlist/partials/_toolbar.htm
+++ b/widgets/versionlist/partials/_toolbar.htm
@@ -12,7 +12,7 @@
                         
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:;" data-builder-command="version:cmdCreateVersion" data-version-type="seeder" class="oc-icon-th"><?= e(trans('rainlab.builder::lang.version.seeder')) ?></a></li>
 
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:;" data-builder-command="version:cmdCreateVersion" data-version-type="seeder" class="oc-icon-code"><?= e(trans('rainlab.builder::lang.version.custom')) ?></a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:;" data-builder-command="version:cmdCreateVersion" data-version-type="custom" class="oc-icon-code"><?= e(trans('rainlab.builder::lang.version.custom')) ?></a></li>
                     </ul>
                 </div>
             </div>
