--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -42,6 +42,10 @@
         &.mute {
             color: #8f8f8f;
         }
+
+        &.icon-check-square {
+            color: #8da85e;
+        }
     }
 }
 
