--- a/widgets/versionlist/partials/_toolbar.htm
+++ b/widgets/versionlist/partials/_toolbar.htm
@@ -8,11 +8,11 @@
                         ><?= e(trans('rainlab.builder::lang.common.add')) ?></button>
 
                     <ul class="dropdown-menu" role="menu" data-dropdown-title="<?= e(trans('cms::lang.asset.drop_down_add_title')) ?>">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:;" data-builder-command="version:cmdCreateVersion" data-version-type="custom" class="oc-icon-repeat"><?= e(trans('rainlab.builder::lang.version.custom')) ?></a></li>
+
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:;" data-builder-command="version:cmdCreateVersion" data-version-type="migration" class="oc-icon-table"><?= e(trans('rainlab.builder::lang.version.migration')) ?></a></li>
                         
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:;" data-builder-command="version:cmdCreateVersion" data-version-type="seeder" class="oc-icon-th"><?= e(trans('rainlab.builder::lang.version.seeder')) ?></a></li>
-
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="javascript:;" data-builder-command="version:cmdCreateVersion" data-version-type="custom" class="oc-icon-code"><?= e(trans('rainlab.builder::lang.version.custom')) ?></a></li>
                     </ul>
                 </div>
             </div>
