Finished localization management

--- a/behaviors/indexlocalizationoperations/partials/_tab.htm
+++ b/behaviors/indexlocalizationoperations/partials/_tab.htm
@@ -2,6 +2,8 @@
     'class' => 'layout  hide-secondary-tabs',
     'data-change-monitor' => 'true',
     'data-window-close-confirm' => e(trans('backend::lang.form.confirm_tab_close')),
+    'data-new-string-message' => e(trans('rainlab.builder::lang.localization.new_string_warning')),
+    'data-structure-mismatch' => e(trans('rainlab.builder::lang.localization.structure_mismatch')),
     'data-entity' => 'localization',
     'onsubmit' => 'return false'
 ]) ?>
