--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -6,6 +6,7 @@
 
 @import "buildingarea.less";
 @import "controlblueprint.less";
+@import "behaviors.less";
 @import "tabs.less";
 @import "menus.less";
 
