--- a/assets/less/behaviors.less
+++ b/assets/less/behaviors.less
@@ -7,5 +7,18 @@
         padding: 20px;
         margin-bottom: 0;
         list-style: none;
+
+        li {
+            h4 {
+                span {
+                    display: inline-block;
+                    color: white;
+                    margin: 0 auto;
+                    .border-radius(20px);
+                    background: @builder-control-border-color;
+                    padding: 20px;
+                }
+            }
+        }
     }
 }
