--- a/formwidgets/controllerbuilder/partials/_behavior.htm
+++ b/formwidgets/controllerbuilder/partials/_behavior.htm
@@ -1,7 +1,16 @@
 <?php
     $behaviorInfo = $this->getBehaviorInfo($behaviorClass);
+
+    $fieldsConfiguration = $this->propertiesToInspectorSchema($behaviorInfo['properties']);
 ?>
 
 <li>
     <h4><span><?= e(Lang::get($behaviorInfo['name'])) ?></span></h4>
+
+    <div class="behavior-container" data-inspectable="true" data-inspector-title="<?= Lang::get($behaviorInfo['name']) ?>">
+        <?= $this->renderBehaviorBody($behaviorClass, $behaviorInfo, $behaviorConfig) ?>
+
+        <input type="hidden" value="<?= e(json_encode($fieldsConfiguration)) ?>" data-inspector-config>
+        <input type="hidden" name="behaviors[<?= e($behaviorClass) ?>]" value="<?= e(json_encode($behaviorConfig)) ?>" data-inspector-values>
+    </div>
 </li>
