--- a/widgets/defaultbehaviordesigntimeprovider/partials/_behavior-form-controller.htm
+++ b/widgets/defaultbehaviordesigntimeprovider/partials/_behavior-form-controller.htm
@@ -1,1 +1,23 @@
-form controller
+<div class="form-behavior">
+    <div class="form">
+        <div class="field">
+            <div class="label size-3"></div>
+            <div class="control"></div>
+        </div>
+
+        <div class="field left">
+            <div class="label size-5"></div>
+            <div class="control"></div>
+        </div>
+
+        <div class="field right">
+            <div class="label size-2"></div>
+            <div class="control"></div>
+        </div>
+    </div>
+
+    <div>
+        <div class="button size-3 pull-right"></div>
+        <div class="button size-5 pull-right"></div>
+    </div>
+</div>
