--- a/widgets/controllerlist/partials/_toolbar.htm
+++ b/widgets/controllerlist/partials/_toolbar.htm
@@ -3,7 +3,8 @@
         <div class="toolbar-item" data-calculate-width>
             <div class="btn-group">
                 <button type="button" class="btn btn-primary oc-icon-plus last"
-                    data-builder-command="controller:cmdCreateController"
+                        data-control="popup"
+                        data-handler="onControllerShowCreatePopup"
                     ><?= e(trans('rainlab.builder::lang.common.add')) ?></button>
             </div>
         </div>
