--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -9,6 +9,7 @@
 @import "behaviors.less";
 @import "tabs.less";
 @import "menus.less";
+@import "localization.less";
 
 .control-filelist ul li.group.model > h4 a:after {
     content: @random;
