Implementing localization management, in progress.

--- a/behaviors/indexlocalizationoperations/partials/_tab.htm
+++ b/behaviors/indexlocalizationoperations/partials/_tab.htm
@@ -5,6 +5,7 @@
     'data-new-string-message' => e(trans('rainlab.builder::lang.localization.new_string_warning')),
     'data-structure-mismatch' => e(trans('rainlab.builder::lang.localization.structure_mismatch')),
     'data-entity' => 'localization',
+    'data-default-language' => e($defaultLanguage),
     'onsubmit' => 'return false'
 ]) ?>
     <?= $form->render() ?>
